Fix margin-top and text-alignment

--- a/src/common/pages/_sign-up.scss
+++ b/src/common/pages/_sign-up.scss
@@ -7,7 +7,7 @@
 
     @media (min-width: $xl-break) {
       display: flex;
-      margin-top: 50px;
+      margin-top: 35px;
     }
 
     .left-image {
@@ -125,7 +125,6 @@
         }
 
         .form-bottom-description {
-          text-align: left;
           margin-bottom: 0px;
           margin-top: 16px;
           line-height: 22px;
